{
    "name": "InputActions",
    "maps": [
        {
            "name": "Game",
            "id": "a1f3b6fa-0ccd-4ed2-a92e-624af698db04",
            "actions": [
                {
                    "name": "PointerPosition",
                    "type": "Value",
                    "id": "9b1cc5e2-262f-49bf-ba34-cb978a895386",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "PerformAction",
                    "type": "Button",
                    "id": "6a29cf96-a39c-45f5-945e-f0db0dedde61",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CancelAction",
                    "type": "Button",
                    "id": "30702d4e-8af4-4524-933f-1934ec2a05a6",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "2931cb34-6c8d-4d66-9b8f-dc064d834f5f",
                    "path": "<Pointer>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PointerPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "60896c84-c0d9-466e-9a14-f009278a75d3",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PerformAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "07b87c22-2de8-4809-a9a9-108d3c574318",
                    "path": "<Touchscreen>/primaryTouch/tap",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PerformAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2bd5cc12-7191-4333-9473-55c46cf505d9",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CancelAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1e04eaf2-f3de-469c-918b-7c7762137c2b",
                    "path": "<Touchscreen>/{SecondaryAction}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CancelAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}